feat: complete P2 network recovery and machine ownership